# particle-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.js  index.html  package-lock.json  package.json  webpack.dev.js  webpack.docs.js
demo/: index.html  main.js  package.json  webpack.config.js
docs/demo/: 1.particles.js  index.html  particles.js
lib/: index.js
lib/crate/: .gitignore  Cargo.toml
lib/crate/src/: lib.rs
pkg/: README.md  package.json  particle_manager.d.ts  particle_manager.js  particle_manager_bg.d.ts  particle_manager_bg.wasm
src/: lib.rs
