[package]
name = "particles"
description = "Particle Creating Library for Browser with WebAssembly"
version = "0.1.0"
authors = ["Seungjae Park <astr36@naver.com>"]
edition = "2018"
publish = false
repository = "https://github.com/Astro36/particle-manager"
readme = "README.md"
keywords = ["javascript", "webassembly", "particles", "particle", "manager"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
