[package]
name = "particles"
description = "Particle Generator JavaScript Library with WebAssembly"
version = "0.1.0"
authors = ["Seungjae Park <astr36@naver.com>"]
edition = "2018"
publish = false
repository = "https://github.com/Astro36/particles"
readme = "README.md"
keywords = ["javascript", "webassembly", "particles"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
